--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "epi-dashboard",
+  "name": "dashboard",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "angular-calendar": "^0.6.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.1.1",
